--- a/forgot-password.html
+++ b/forgot-password.html
@@ -1,5 +1,120 @@
-<!DOCTYPE html><html lang="en">
-<!-- Mirrored from flatfull.com/themes/pulse/forgot-password.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:15 GMT -->
-<head><meta charset="utf-8"><title>pulse - Music, Audio and Radio web application</title><meta name="description" content="Music, Musician, Bootstrap"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimal-ui"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-barstyle" content="black-translucent"><link rel="apple-touch-icon" href="images/logo.png"><meta name="apple-mobile-web-app-title" content="Flatkit"><meta name="mobile-web-app-capable" content="yes"><link rel="shortcut icon" sizes="196x196" href="images/logo.png"><link rel="stylesheet" href="css/animate.css/animate.min.css" type="text/css"><link rel="stylesheet" href="css/glyphicons/glyphicons.css" type="text/css"><link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" type="text/css"><link rel="stylesheet" href="css/material-design-icons/material-design-icons.css" type="text/css"><link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css" type="text/css"><link rel="stylesheet" href="css/styles/app.min.css"></head><body><div class="app dk" id="app"><div class="padding"><div class="navbar"><div class="pull-center"><a href="index.html" class="navbar-brand md"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32"><circle cx="24" cy="24" r="24" fill="rgba(255,255,255,0.2)"/><circle cx="24" cy="24" r="22" fill="#1c202b" class="brand-color"/><circle cx="24" cy="24" r="10" fill="#ffffff"/><circle cx="13" cy="13" r="2" fill="#ffffff" class="brand-animate"/><path d="M 14 24 L 24 24 L 14 44 Z" fill="#FFFFFF"/><circle cx="24" cy="24" r="3" fill="#000000"/></svg> <img src="images/logo.png" alt="." class="hide"> <span class="hidden-folded inline">pulse</span></a></div></div></div><div class="b-t"><div class="center-block w-xxl w-auto-xs p-y-md text-center"><div class="p-a-md"><div><h4>Forgot your password?</h4><p class="text-muted m-y">Enter your email below and we will send you instructions on how to change your password.</p></div><form name="reset"><div class="form-group"><input type="email" placeholder="Email" class="form-control" required></div><button type="submit" class="btn black btn-block p-x-md">Send</button></form><div class="p-y-lg">Return to <a href="signin.html" class="text-primary _600">Sign in</a></div></div></div></div></div><script src="scripts/app.min.js"></script></body>
-<!-- Mirrored from flatfull.com/themes/pulse/forgot-password.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:15 GMT -->
+<!DOCTYPE html>
+<html lang="en">
+  <!-- Mirrored from flatfull.com/themes/pulse/forgot-password.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:15 GMT -->
+  <head>
+    <meta charset="utf-8" />
+    <title>pulse - Music, Audio and Radio web application</title>
+    <meta name="description" content="Music, Musician, Bootstrap" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,minimal-ui"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-barstyle"
+      content="black-translucent"
+    />
+    <link rel="apple-touch-icon" href="images/logo.png" />
+    <meta name="apple-mobile-web-app-title" content="Flatkit" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="shortcut icon" sizes="196x196" href="images/logo.png" />
+    <link
+      rel="stylesheet"
+      href="css/animate.css/animate.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/glyphicons/glyphicons.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/font-awesome/css/font-awesome.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/material-design-icons/material-design-icons.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/bootstrap/dist/css/bootstrap.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="css/styles/app.min.css" />
+  </head>
+  <body>
+    <div class="app dk" id="app">
+      <div class="padding">
+        <div class="navbar">
+          <div class="pull-center">
+            <a href="index.html" class="navbar-brand md"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 48 48"
+                width="32"
+                height="32"
+              >
+                <circle cx="24" cy="24" r="24" fill="rgba(255,255,255,0.2)" />
+                <circle
+                  cx="24"
+                  cy="24"
+                  r="22"
+                  fill="#1c202b"
+                  class="brand-color"
+                />
+                <circle cx="24" cy="24" r="10" fill="#ffffff" />
+                <circle
+                  cx="13"
+                  cy="13"
+                  r="2"
+                  fill="#ffffff"
+                  class="brand-animate"
+                />
+                <path d="M 14 24 L 24 24 L 14 44 Z" fill="#FFFFFF" />
+                <circle cx="24" cy="24" r="3" fill="#000000" />
+              </svg>
+              <img src="images/logo.png" alt="." class="hide" />
+              <span class="hidden-folded inline">pulse</span></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="b-t">
+        <div class="center-block w-xxl w-auto-xs p-y-md text-center">
+          <div class="p-a-md">
+            <div>
+              <h4>Forgot your password?</h4>
+              <p class="text-muted m-y">
+                Enter your email below and we will send you instructions on how
+                to change your password.
+              </p>
+            </div>
+            <form name="reset">
+              <div class="form-group">
+                <input
+                  type="email"
+                  placeholder="Email"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn black btn-block p-x-md">
+                Send
+              </button>
+            </form>
+            <div class="p-y-lg">
+              Return to
+              <a href="signin.html" class="text-primary _600">Sign in</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="scripts/app.min.js"></script>
+  </body>
+  <!-- Mirrored from flatfull.com/themes/pulse/forgot-password.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:15 GMT -->
 </html>
