--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,153 @@
-<!DOCTYPE html><html lang="en">
-<!-- Mirrored from flatfull.com/themes/pulse/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:07 GMT -->
-<head><meta charset="utf-8"><title>pulse - Music, Audio and Radio web application</title><meta name="description" content="Music, Musician, Bootstrap"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimal-ui"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-barstyle" content="black-translucent"><link rel="apple-touch-icon" href="images/logo.png"><meta name="apple-mobile-web-app-title" content="Flatkit"><meta name="mobile-web-app-capable" content="yes"><link rel="shortcut icon" sizes="196x196" href="images/logo.png"><link rel="stylesheet" href="css/animate.css/animate.min.css" type="text/css"><link rel="stylesheet" href="css/glyphicons/glyphicons.css" type="text/css"><link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" type="text/css"><link rel="stylesheet" href="css/material-design-icons/material-design-icons.css" type="text/css"><link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css" type="text/css"><link rel="stylesheet" href="css/styles/app.min.css"></head><body><div class="app dk" id="app"><div class="padding"><div class="navbar"><div class="pull-center"><a href="index.html" class="navbar-brand md"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32"><circle cx="24" cy="24" r="24" fill="rgba(255,255,255,0.2)"/><circle cx="24" cy="24" r="22" fill="#1c202b" class="brand-color"/><circle cx="24" cy="24" r="10" fill="#ffffff"/><circle cx="13" cy="13" r="2" fill="#ffffff" class="brand-animate"/><path d="M 14 24 L 24 24 L 14 44 Z" fill="#FFFFFF"/><circle cx="24" cy="24" r="3" fill="#000000"/></svg> <img src="images/logo.png" alt="." class="hide"> <span class="hidden-folded inline">pulse</span></a></div></div></div><div class="b-t"><div class="center-block w-xxl w-auto-xs p-y-md text-center"><div class="p-a-md"><div><a href="#" class="btn btn-block indigo text-white m-b-sm"><i class="fa fa-facebook pull-left"></i> Sign up with Facebook</a> <a href="#" class="btn btn-block red text-white"><i class="fa fa-google-plus pull-left"></i> Sign up with Google+</a></div><div class="m-y text-sm">OR</div><form name="form" action="https://flatfull.com/themes/pulse/home.html"><div class="form-group"><input type="text" class="form-control" placeholder="Username" required></div><div class="form-group"><input type="email" class="form-control" placeholder="Email" required></div><div class="form-group"><input type="password" class="form-control" placeholder="Password" required></div><div class="m-b-md text-sm"><span class="text-muted">By clicking Sign Up, I agree to the</span> <a href="#">Terms of service</a> <span class="text-muted">and</span> <a href="#">Policy Privacy.</a></div><button type="submit" class="btn btn-lg black p-x-lg">Sign Up</button></form><div class="p-y-lg text-center"><div>Already have an account? <a href="signin.html" class="text-primary _600">Sign in</a></div></div></div></div></div></div><script src="scripts/app.min.js"></script></body>
-<!-- Mirrored from flatfull.com/themes/pulse/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:07 GMT -->
+<!DOCTYPE html>
+<html lang="en">
+  <!-- Mirrored from flatfull.com/themes/pulse/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:07 GMT -->
+  <head>
+    <meta charset="utf-8" />
+    <title>pulse - Music, Audio and Radio web application</title>
+    <meta name="description" content="Music, Musician, Bootstrap" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,minimal-ui"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-barstyle"
+      content="black-translucent"
+    />
+    <link rel="apple-touch-icon" href="images/logo.png" />
+    <meta name="apple-mobile-web-app-title" content="Flatkit" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="shortcut icon" sizes="196x196" href="images/logo.png" />
+    <link
+      rel="stylesheet"
+      href="css/animate.css/animate.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/glyphicons/glyphicons.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/font-awesome/css/font-awesome.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/material-design-icons/material-design-icons.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/bootstrap/dist/css/bootstrap.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="css/styles/app.min.css" />
+  </head>
+  <body>
+    <div class="app dk" id="app">
+      <div class="padding">
+        <div class="navbar">
+          <div class="pull-center">
+            <a href="index.html" class="navbar-brand md"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 48 48"
+                width="32"
+                height="32"
+              >
+                <circle cx="24" cy="24" r="24" fill="rgba(255,255,255,0.2)" />
+                <circle
+                  cx="24"
+                  cy="24"
+                  r="22"
+                  fill="#1c202b"
+                  class="brand-color"
+                />
+                <circle cx="24" cy="24" r="10" fill="#ffffff" />
+                <circle
+                  cx="13"
+                  cy="13"
+                  r="2"
+                  fill="#ffffff"
+                  class="brand-animate"
+                />
+                <path d="M 14 24 L 24 24 L 14 44 Z" fill="#FFFFFF" />
+                <circle cx="24" cy="24" r="3" fill="#000000" />
+              </svg>
+              <img src="images/logo.png" alt="." class="hide" />
+              <span class="hidden-folded inline">pulse</span></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="b-t">
+        <div class="center-block w-xxl w-auto-xs p-y-md text-center">
+          <div class="p-a-md">
+            <div>
+              <a href="#" class="btn btn-block indigo text-white m-b-sm"
+                ><i class="fa fa-facebook pull-left"></i> Sign up with
+                Facebook</a
+              >
+              <a href="#" class="btn btn-block red text-white"
+                ><i class="fa fa-google-plus pull-left"></i> Sign up with
+                Google+</a
+              >
+            </div>
+            <div class="m-y text-sm">OR</div>
+            <form
+              name="form"
+              action="https://flatfull.com/themes/pulse/home.html"
+            >
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Username"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="Password"
+                  required
+                />
+              </div>
+              <div class="m-b-md text-sm">
+                <span class="text-muted"
+                  >By clicking Sign Up, I agree to the</span
+                >
+                <a href="#">Terms of service</a>
+                <span class="text-muted">and</span>
+                <a href="#">Policy Privacy.</a>
+              </div>
+              <button type="submit" class="btn btn-lg black p-x-lg">
+                Sign Up
+              </button>
+            </form>
+            <div class="p-y-lg text-center">
+              <div>
+                Already have an account?
+                <a href="signin.html" class="text-primary _600">Sign in</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="scripts/app.min.js"></script>
+  </body>
+  <!-- Mirrored from flatfull.com/themes/pulse/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 23 Jun 2024 19:32:07 GMT -->
 </html>
